<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>fanuc_j519_msgs</name>
  <version>0.1.0</version>
  <description>ROS-ified versions of the packets used by Fanuc Robotics Stream Motion option (J519).</description>
  <author>G.A. vd. Hoorn</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

  <export>
    <architecture_independent />
    <rosindex>
      <tags>
        <tag>messages</tag>
        <tag>j519</tag>
        <tag>fanuc</tag>
      </tags>
    </rosindex>
    <ros_industrial>
      <support_level value="community" />
    </ros_industrial>
  </export>
</package>
